--- a/Pratik - Identity and Data Protection/appsettings.json
+++ b/Pratik - Identity and Data Protection/appsettings.json
@@ -1,10 +1,19 @@
 {
-  "ConnectionStrings": { "Default": "Server= DESKTOP-2GB9CMU\\SQLEXPRESS; Database=IdentityDb; Trusted_Connection= true; TrustServerCertificate=true" },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "Default": "Server= DESKTOP-2GB9CMU\\SQLEXPRESS; Database=IdentityDb; Trusted_Connection= true; TrustServerCertificate=true"
+
   },
-  "AllowedHosts": "*"
-}
+  "Jwt": {
+    "Key": "asdjasdj12312ı3j1kajsdaksjdkjas",
+    "Issuer": "http://localhost:5254",
+    "Audience": "http://localhost:5254"
+  },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
+
